<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".presentation.fragments.AgreementFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/main_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_tems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_bg"

            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_accept_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <TextView
                android:id="@+id/tv_i_have_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/i_have_read_and_accept"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_accept_terms">

            </TextView>


            <!--            android:text="@string/terms"-->
            <RadioButton
                android:id="@+id/term_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_i_have_read">

            </RadioButton>


            <TextView
                android:id="@+id/tv_radio_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/terms"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/term_radio"
                app:layout_constraintTop_toBottomOf="@id/tv_i_have_read">

            </TextView>


            <!--            android:text="@string/privacy"-->
            <RadioButton
                android:id="@+id/privacy_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:textColor="@color/white"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/term_radio">

            </RadioButton>

            <TextView
                android:id="@+id/tv_radio_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:text="@string/privacy"
                app:layout_constraintStart_toEndOf="@id/privacy_radio"
                app:layout_constraintTop_toBottomOf="@id/tv_radio_1"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_i_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_button_bg"
            android:gravity="center"
            android:text="@string/i_agree"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_reject"
            app:layout_constraintTop_toBottomOf="@id/layout_tems"

            >

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reject"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button_bg"
            android:gravity="center"
            android:text="@string/reject"
            android:textColor="@color/white"
            app:layout_constraintLeft_toRightOf="@id/btn_i_agree"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_tems"

            >

        </androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>