<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.PreLoginFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:src="@drawable/main_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="gone"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toTopOf="parent"

            >

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/phone_call_icon"
                android:layout_marginRight="12dp"
                app:layout_constraintRight_toLeftOf="@id/tv_phone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </ImageView>
            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_phone"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/btn_phone"

            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/email_icon"
                android:layout_marginRight="12dp"
                app:layout_constraintRight_toLeftOf="@id/tv_email"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </ImageView>
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_fb"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/fb_button_bg"
            app:layout_constraintTop_toBottomOf="@id/btn_email"

            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/facebook_icon_b"
                android:layout_marginRight="12dp"
                app:layout_constraintRight_toLeftOf="@id/tv_fb"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </ImageView>
            <TextView
                android:id="@+id/tv_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_facebook"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/gmail_button_bg"
            app:layout_constraintTop_toBottomOf="@id/btn_fb"

            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/gmail_icon"
                android:layout_marginRight="12dp"
                app:layout_constraintRight_toLeftOf="@id/tv_gmail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

            </ImageView>
            <TextView
                android:id="@+id/tv_gmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_with_google"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                >

            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


<!--    <TextView-->
<!--        android:id="@+id/termsAndPolicyTv"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginHorizontal="35dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:text="@string/termsAndPolicy"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:textColorLink="@drawable/spanselector"-->
<!--        android:textSize="14sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->


    <TextView
            android:id="@+id/termsAndPolicyIntroTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/termsAndPolicyIntro"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:gravity="center"
            android:textColorLink="@drawable/spanselector"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/termsContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/termsContainer"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/termsAndConditionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/termsAndCondition"
            android:textAllCaps="false"
            android:textColor="@color/darkblue"
            android:gravity="center"
            android:textSize="14sp"
             />

        <TextView
            android:id="@+id/AndTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/And"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/PrivacyPolicyTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/privacyPolicy"
            android:textAllCaps="false"
            android:textColor="@color/darkblue"
            android:gravity="center"
            android:textColorLink="@drawable/spanselector"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>