<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:layout_alignParentTop="true" >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.ResetPasswordFragment">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:src="@drawable/main_logo"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintTop_toBottomOf="@id/logo">



        <TextView
            android:id="@+id/tv_enter_new_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/enter_new_pass"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"

            >

        </TextView>

        <EditText
            android:id="@+id/et_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:hint="@string/new_pass"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:nextFocusDown="@id/et_confirm_pass"
            android:paddingLeft="20dp"
            android:textColor="@color/white"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_new_pass"

            >

        </EditText>

        <ImageView
            android:id="@+id/iv_show_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            app:layout_constraintRight_toRightOf="@id/et_pass"
            app:layout_constraintTop_toTopOf="@id/et_pass"
            app:layout_constraintBottom_toBottomOf="@id/et_pass"
            app:tint="@color/white"/>

        <EditText
            android:id="@+id/et_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:nextFocusDown="@id/btn_reset"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:background="@drawable/round_edittext_bg"
            app:layout_constraintTop_toBottomOf="@id/et_pass"

            >

        </EditText>

        <ImageView
            android:id="@+id/iv_show_pass_reenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            app:layout_constraintRight_toRightOf="@id/et_confirm_pass"
            app:layout_constraintTop_toTopOf="@id/et_confirm_pass"
            app:layout_constraintBottom_toBottomOf="@id/et_confirm_pass"
            app:tint="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reset"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/round_button_bg"
            app:layout_constraintTop_toBottomOf="@id/et_confirm_pass"

            >

        </androidx.appcompat.widget.AppCompatButton>







    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</RelativeLayout>